--- a/sass/page/_sec-faq.scss
+++ b/sass/page/_sec-faq.scss
@@ -52,10 +52,12 @@
             }
             .open-acco {
                 position: absolute;
-                left: 0;
-                right: 0;
-                width: 100%;
+                top: 0;
+                right: 10px;
+                width: 40px;
                 height: 100%;
+                border-radius: 50%;
+                cursor: pointer;
             }
         }
         .content {
