--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -49,6 +49,10 @@ body::-webkit-scrollbar {
     
   }
    
-  body::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
     background-color: #198754;
-  }
+}
+
+.swiper {
+    padding: 15px;
+}
