--- a/sass/page/_sec-faq.scss
+++ b/sass/page/_sec-faq.scss
@@ -28,7 +28,7 @@
             .icon {
                 position: relative;
                 transform: rotate(180deg);
-                transition: $transition;
+                transition: 0.6s ease;
                 span {
                     position: absolute;
                     left: 50%;
@@ -72,6 +72,7 @@
             padding: 20px;
             p {
                 color: hsla(0, 0%, 100%, 0.78);
+                margin-bottom: 20px;
             }
         }
     }
