--- a/sass/page/_services.scss
+++ b/sass/page/_services.scss
@@ -7,12 +7,12 @@
 
 .services-slider {
     .crards {
+        .item {
+            box-shadow: 0 0 10px hsla(0, 0%, 0%, 10%);
+        }
         .card {
-            width: 100%;
             padding: 100px 50px;
             background: $bs-white;
-            box-shadow: 0 0 10px hsl(0, 0%, 90%);
-            display: inline-block;
             
             i {
                 font-size: 50px;
